[package]
name = "graph_walker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.4.1"
graph = "0.3.0"
oorandom = "11.1.3"
pad = "0.1.6"
petgraph = "0.6.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.4.0"


[[bench]]
name = "tick_benchmark"
harness = false